fixed small bug on index

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -37,6 +37,7 @@
                   <% else %>
                     <div class="card-btn-index" data-bookings-id="<%= activity.id %>">
                       <p>Register</p>
+                    </div>
                   <% end %>
                 <% else %>
                   <%= render 'bookings/registered', activity: activity %>
