--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,12 +12,13 @@
 
 .btn-search-navbar {
   font-size: 16px;
+  line-height: 1em;
   height: 5vh;
   background-color: $orange;
   color: white;
   border-radius: 20px;
   margin-left: 10px;
-  margin-top: 5px;
+  //margin-top: 5px;
   filter: brightness(95%);
 }
 
