--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,3 @@
-.navbar-logo {
-  margin-top: 5px;
-}
-
 a.navbar-logo:hover {
   text-decoration: none;
   color: white;
@@ -14,6 +10,11 @@ a.navbar-logo:hover {
   background: $gray;
   height: 71px;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 0;
+  height: 70px;
+  align-items: center;
 }
 
 .navbar-coolfit .navbar-collapse {
