--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -20,9 +20,21 @@
 }
 
 .navbar-search {
-  width: 40vh;
-  height: 5vh;
-  text-align: start;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-search-form {
+  display: flex;
+  justify-content: space-around;
+  margin-left: 20px;
+}
+
+.navbar-search-field {
+  //height: 5vh;
+  //text-align: start;
+  align-self: center;
   padding-left: 15px;
   background-color: $dark-gray;
   color: white;
@@ -35,5 +47,4 @@
     color:$light-gray;
     font-size: 16px;
   }
-
 }
