--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -29,14 +29,14 @@
               <% if activity.owner != current_user %>
                 <% booking = @user_registrations.select{ |booking| booking.activity == activity } %>
                 <% if booking == [] %>
+                  <%= render 'interests/heart_button', activity: activity, user_interests: @user_interests %>
                   <% if (activity.max_capacity.nil? || activity.bookings.size < activity.max_capacity) %>
-                    <%= render 'interests/heart_button', activity: activity, user_interests: @user_interests %>
                     <div class="card-btn-index" data-bookings-id="<%= activity.id %>">
                       <%= link_to "Register", activity_bookings_path(activity), method: :post, remote: true, class: "btn register-btn" %>
                     </div>
                   <% else %>
                     <div class="card-btn-index" data-bookings-id="<%= activity.id %>">
-                      <p>Register</p>
+                      <div class="btn register-btn-selected fully-booked">Register<span class="bookedtext">Sorry, this class is fully booked!</span></div>
                     </div>
                   <% end %>
                 <% else %>
