--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -58,14 +58,16 @@
       </div>
     </div>
   </div>
-</div>
+
 <br>
 <hr size="6" width="100%" align="left" color="#C8C8C8">
 <br>
+
+  <div>
     <h3>Past events<a data-toggle="collapse" href="#past-bookings" role="button" aria-expanded="false" aria-controls="past-bookings" style="float:right;"><i class="fas fa-plus-circle dashboard-plus"></i>
     </a></h3>
     <div class="collapse" id="past-bookings">
-      <div class="past-bookings" style="display:none;" id="past_bookings">
+      <div class="past-bookings" id="past_bookings">
         <% if @past_bookings %>
           <% @past_bookings.each do |booking| %>
             <%= render 'bookings/past_bookings', booking: booking %>
@@ -74,8 +76,9 @@
       </div>
     </div>
   </div>
-  <br>
-  <hr size="6" width="100%" align="left" color="#C8C8C8">
-</div>
+
+<br>
+<hr size="6" width="100%" align="left" color="#C8C8C8">
+
 </div>
 
