fixed front on links to health benef

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -64,13 +64,16 @@
   color: $orange;
 }
 
+.card-index-benef:hover {
+  color: $orange;
+}
+
 .card-index-tags {
   margin-right: 10px;
   p {
     margin-bottom: 0;
     }
 }
-
 
 .avatar-name a {
   color: $gray;
