fixing more small bugs

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -76,7 +76,7 @@
   border-radius: 10px;
   text-decoration: none;
   margin-top: 10px;
-  filter: brightness(97%);
+  // filter: brightness(97%);
 }
 
 .btn-edit-user:hover {
