--- a/app/assets/stylesheets/devise/_form.scss
+++ b/app/assets/stylesheets/devise/_form.scss
@@ -9,7 +9,7 @@
   background-image: linear-gradient( rgba(0,0,0,0.1),rgba(0,0,0,0.1) ),asset-url('old-sports-mosaic.png')
 }
 
-.form-inputs {
+.form-inputs.devise {
   color: white;
   font-family: $body-font;
 
