--- a/app/views/activities/_future_activities.html.erb
+++ b/app/views/activities/_future_activities.html.erb
@@ -1,5 +1,4 @@
-<!-- <div class="card-dashboard" data-future-activities-id="<%= activity.id %>"> -->
-<div class="card-dashboard d-flex">
+<div class="card-dashboard d-flex" data-future-activities-id="<%= activity.id %>">
 
   <%= render 'shared/card_index', activity: activity %>
 
