--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -8,6 +8,6 @@
   </div>
 
   <div style="margin-top: 10px; text-align:right;">
-    <%= link_to 'Cancel', dashboard_owner_path, class: "password-btn" %>
+    <%= link_to 'Cancel', owner_dashboard_path(current_user), class: "password-btn" %>
   </div>
 </div>
