--- a/app/views/pages/dashboard_owner.html.erb
+++ b/app/views/pages/dashboard_owner.html.erb
@@ -7,8 +7,17 @@
     <h1>See below the events <span class="banner-logo"><%= @user.username %></span> is organizing</h1>
     <% end %>
   </div>
-
   <br>
+
+  <% if current_user == @user %>
+    <div class="d-flex justify-content-between align-items-baseline">
+      <h5>Create your own events and bring people together!</h5>
+      <%= link_to "Create an event", new_activity_path, class:"btn admin-btn", style:"font-size: 20px; border: 1px solid rgba(39, 39, 39, 0.2); width: 180px"%>
+    </div>
+  <% end %>
+  <br>
+
+  <hr size="6" width="100%" align="left" color="#C8C8C8">
 
   <h5><strong>Description:</strong> <%= @user.description %></h5>
   <br>
@@ -22,26 +31,21 @@
   </h5>
   <br>
 
-  <div class="d-flex">
-    <h5><strong>Average rating:</strong>
-    <% if @user.average_owner_rating.zero? %>
-      <em style="filter: brightness(150%);">no rating yet</em>
-    <% else %>
-      <div class="d-flex justify-content-start">
-        <% @user.average_owner_rating.times.each do |rate| %>
-        <i class="fas fa-star" style="color:#FA9800;"></i>
-        <% end %>
-        <% @user.star_to_5.times.each do |rate| %>
-        <i class="fas fa-star" style="color:#C8C8C8;"></i>
-        <% end %>
-      </div>
-    <% end %>
-    </h5>
-  </div>
 
-  <% if current_user == @user %>
-    <h5>Create your own events and bring people together around your favorite activities! <%= link_to "Create", new_activity_path, class:"btn admin-btn", style:"font-size: 20px"%></h5>
+  <div><h5><strong>Average rating:</strong></h5>
+  <% if @user.average_owner_rating.zero? %>
+    <em style="filter: brightness(150%);">no rating yet</em>
+  <% else %>
+    <div class="d-flex justify-content-start">
+      <% @user.average_owner_rating.times.each do |rate| %>
+      <i class="fas fa-star" style="color:#FA9800;"></i>
+      <% end %>
+      <% @user.star_to_5.times.each do |rate| %>
+      <i class="fas fa-star" style="color:#C8C8C8;"></i>
+      <% end %>
+    </div>
   <% end %>
+
   <br>
 
   <% if !@future_activities.empty? %>
