--- a/app/views/pages/edit_profile.html.erb
+++ b/app/views/pages/edit_profile.html.erb
@@ -6,6 +6,6 @@
   <%= render 'form', user: @user %>
 
   <div style="margin-top: 10px; text-align:right;">
-    <%= link_to 'Cancel', dashboard_owner_path, class: "password-btn" %>
+    <%= link_to 'Cancel', dashboard_path, class: "password-btn" %>
   </div>
 </div>
