--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -30,7 +30,7 @@
           <%= text_field_tag :location_query,
             params[:location_query], class: "form-control",
             placeholder: "Type in your address...", class: "banner-search" %>
-            <%= submit_tag 'Search!', class: "btn btn-search" %>
+            <%= submit_tag 'Search!', class: "btn btn-search mt-0 mb-1" %>
           <% end %>
         </div>
       </div>
