front end on sign up form

--- a/app/assets/stylesheets/devise/_form.scss
+++ b/app/assets/stylesheets/devise/_form.scss
@@ -12,7 +12,10 @@
 .form-inputs.devise {
   color: white;
   font-family: $body-font;
-
+  background-color: $gray;
+  opacity: 0.85;
+  padding: 30px;
+  border-radius: 2px;
 }
 
 .text-muted {
