--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,5 +1,9 @@
 <p id="notice"><%= notice %></p>
 
+<% content_for :meta_title, "#{@activity.name} is on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_description, @activity.description %>
+<% content_for :meta_image, cl_image_path(@activity.photo_db) %>
+
 <div class="container mt-6 show-container">
 
 <div class="container mt-4 show-container">
@@ -81,4 +85,3 @@
     </div>
 
 </div>
-
