search banner button

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -26,6 +26,13 @@
   transition-delay: s150ms;
 }
 
+.btn-search-banner {
+  margin-top: 0px;
+  margin-bottom: 2px;
+  border-radius: 20px !important;
+  margin-left: 5px;
+}
+
 .admin-btn {
   font-size: 14px;
   background-color: white;
