padding on home button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -149,8 +149,8 @@
 <br>
 <br>
 
-<div class="d-flex justify-content-center">
-  <%= link_to "More activities", activities_path, class:"btn btn-search"%>
+<div class="d-flex justify-content-center" style="padding-bottom: 5vh;">
+  <%= link_to "More activities", activities_path, class: "btn btn-search"%>
 </div>
 
 
